--- a/Makefile.uk
+++ b/Makefile.uk
@@ -1,3 +1,3 @@
 $(eval $(call addlib,apphelloworld))
 
-APPHELLOWORLD_SRCS-y += $(APPHELLOWORLD_BASE)/main.c
+APPHELLOWORLD_SRCS-y += $(APPHELLOWORLD_BASE)/main_overall.c
